# X1_Controller

./: .gitignore  Gira_Classes.py  Hands-on Intro.ipynb  README.md  X1API.py  pyproject.toml
resources/: DEVICES.md
src/x1_controller/: __init__.py  api.py  client.py  controller.py  devices.py  enums.py  errors.py
src/x1_controller/common/: errors.py
